Removed background and added opacity

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,9 +2,10 @@ include ~/.cache/wal/colors-kitty.conf
 
 # vim:fileencoding=utf-8:foldmethod=marker
 
-background_image ../../Pictures/Wallpapers/cool/anglescape_fib.png
-background_image_layout scaled
-background_tint 0.8
+# background_image ../../Pictures/Wallpapers/cool/anglescape_fib.png
+background_opacity 0.8
+# background_image_layout scaled
+# background_tint 0.8
 
 #: Fonts {{{
 
