--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -12,8 +12,7 @@ background_opacity 0.8
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
-
-font_family      Fira Code
+# font_family      FiraCode-Regular
 font_size        12.0
 # bold_font        auto
 # italic_font      auto
@@ -678,7 +677,7 @@ disable_ligatures always
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -2352,3 +2351,11 @@ map ctrl+shift+t new_tab_with_cwd
 #: }}}
 
 #: }}}
+
+
+# BEGIN_KITTY_FONTS
+font_family      family="NotoMono Nerd Font"
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+# END_KITTY_FONTS
