updated how wallpapers are sourced

--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -221,6 +221,6 @@ bindsym $mod+x exec --no-startup-id screen_locker.sh
 
 exec --no-startup-id sh -c 'sleep 1; env DISPLAY=:0 XAUTHORITY=/home/matthew/.Xauthority xss-lock -n --not-require-login -- /usr/local/bin/screen_locker.sh &'
 exec --no-startup-id sh $HOME/.config/polybar/launch.sh
-exec_always --no-startup-id wal -i ~/Pictures/Wallpapers/city.jpg
+exec_always --no-startup-id wal -i "$(find ~/Pictures/Wallpapers/current_wallpaper/ -type f | head -n 1)" 
 exec_always --no-startup-id picom
 exec_always autotiling
