--- a/config/.config/kitty/kitty.conf
+++ b/config/.config/kitty/kitty.conf
@@ -2354,7 +2354,8 @@ map ctrl+shift+t new_tab_with_cwd
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="NotoMono Nerd Font"
+#font_family      family="NotoMono Nerd Font"
+font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
